# scripts-general

./: Apply2026Policies.ps1  BiMonthyReminderEDILipeprt.json  CleanupChrome.ps1  DB_report.ps1  DB_repot.ps1  EDIlogCopy.ps1  EnableChromeai.ps1  EncoreAPI Test.ps1  FixGenAiError.ps1  SaveToCred.ps1  TryNewPolicies.ps1  testpram.ps1
EncoreEdiConverter/EncoreEdiConverter/: EncoreEdiConverter.csproj
Upkeep/: 2026Upkeep Status board.ps1  Upkeep Status board.ps1
UpkeepAnalytics/: .gitignore  BUILD.md  BUILD_ALTERNATIVES.md  CMakeLists.txt  README.md  UpkeepAnalytics  build.bat  build_vs.bat
UpkeepAnalytics-PowerShell/: ApiClient.psm1  DashboardGenerator.psm1  DataStore.psm1  README.md  config.json  main.ps1  run.ps1  test.psm1
UpkeepAnalytics-PowerShell/data/: lastrun.json
UpkeepAnalytics-PowerShell/web/: index.html
UpkeepAnalytics/src/: main.cpp
UpkeepAnalytics/src/api/: UpKeepClient.cpp  UpKeepClient.h
UpkeepAnalytics/src/common/: DateUtils.cpp  DateUtils.h  JsonHelpers.h  Logger.h  Types.h
UpkeepAnalytics/src/config/: ConfigManager.cpp  ConfigManager.h
UpkeepAnalytics/src/reporting/: DashboardGenerator.cpp  DashboardGenerator.h
